Change log for Bos Wars
-----------------------

Development version:
- Fixed bug #29533: No way to exit the campaign in the briefing screen (Jimmy Salmon)
- Fixed bug #29389: Save/recall map position not preserved during save/reload of game (Jimmy Salmon)
- Fixed bug #29284: Custom patches aren't completely cleaned (Jimmy Salmon)
- Build static binary without requiring apg++ from autopackage (Francois Beerten)
- Fixed bug #29100: Cannot translate resource names shown in map editor (Jimmy Salmon)
- Add build script using fabricate (Francois Beerten)
- Add moon patches (TimberDragon)

Version 2.6.2 (2010 xx xx):
- Fixed bug #29274: Disabling command log crashes and doesn't always work as expected (Jimmy Salmon)
- Fixed bug #29579: KillUnitAt takes 5 parameters (Jimmy Salmon)

Version 2.6.1 (2010 04 18):
- Fix the position of the morels (Kalle Olavi Niemitalo)
- Correct the draw level of some unit types (Kalle Olavi Niemitalo)
- Update the documentation of the scripting API (Francois Beerten)
- On Windows, use the application directory to save user data (Nehal Mistry)
- Fix crash at the end of the Tutorial campaign (Francois Beerten)

Version 2.6 (2010 04 11):
- Fix crash on exit in Windows (Francois Beerten, Nehal Mistry, Jimmy Salmon)
- Fix bug map editor places magma pump next to hotspot. (Kalle Olavi Niemitalo)
- Support libpng 1.4 (Francois Beerten)
- Fix resource consumption and production issues when rescueing units 
  (Kalle Olavi Niemitalo)
- Add portuguese (pt-pt) translation (Tiago Faria)
- Add the 4on4 map (Michiel van der Wulp)
- Add the hospitality map (Kyran Jackson)
- Add italian translation (Simone Rucci)
- Fix bug #29110 "Fatal error 'bad player' when loading map to editor"
  (Francois Beerten)
- Discard NewOrder if it refers to destroyed unit (Kalle Olavi Niemitalo)
- Recover map specific triggers and settings when loading a saved game (Francois Beerten)
- Add the bottleneck map (Kyran Jackson)